Removed ToC, fixed wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
     color: #F5FFFA;
     margin: auto;
     max-width: 1400px;
+    width: 90%;
 }
 
 .inline {
@@ -52,13 +53,13 @@ header.tophead p {
 }
 
 /* NavBar */
-nav {
+.main-nav nav {
     background-image: linear-gradient(0deg, rgb(0, 0, 102, 0.7), rgb(0, 0, 204, 0.7));
     overflow: hidden;
     margin: 0 auto;
 }
 
-nav a {
+.main-nav nav a {
     float: left;
     display: block;
     color: #f2f2f2;
@@ -69,7 +70,7 @@ nav a {
     font-size: 17px;
 }
 
-nav a:hover {
+.main-nav nav a:hover {
     color: white;
     background-image: linear-gradient(0deg, rgb(32, 80, 112, 0.5), rgb(32, 80, 112, 0.0));
     background-color: rgb(255, 255, 255, 0.1);
@@ -78,39 +79,39 @@ nav a:hover {
     -webkit-transition: 0.5s ease-in-out;
 }
 
-nav a.active {
+.main-nav nav a.active {
     background-image: linear-gradient(0deg, rgb(32, 80, 112, 1.0), rgb(32, 80, 112, 0));
     color: white;
 }
 
-nav .icon {
+.main-nav .navicon {
     display: none;
 }
 
 @media screen and (max-width: 600px) {
-  nav a:not(:first-child) {display:none;}
-  nav a.icon {
+  .main-nav nav a:not(:first-child) {display:none;}
+  .main-nav nav a.navicon {
     float: right;
     display: block;
   }
 }
 
 @media screen and (max-width: 600px) {
-  nav.responsive {
+  .main-nav nav.responsive {
     position: relative;
     background: rgb(0, 0, 102, 0.73);
   }
-  nav.responsive a.icon {
+  .main-nav nav.responsive a.navicon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  nav.responsive a {
+  .main-nav nav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-  nav.responsive a.active {
+  .main-nav nav.responsive a.active {
     background-image: linear-gradient(0deg, rgb(0, 0, 102, 0.7), rgb(0, 0, 204, 0.7));
   }
 }
@@ -170,16 +171,32 @@ nav .icon {
     text-decoration: underline;
 }
 
-.flex-container {
+.wrap {
     display: flex;
+    margin: auto;
+  }
+  
+.wrap-left {
+    width: 30%;
+    /*border: 1px solid green; REMOVE BEFORE PUSH !!!*/
 }
 
-.flex-child {
-    flex: 1;
-}
-
-.flex-child:first-child {
-    margin-right: 20px;
+.wrap-right {
+    width: 70%;
+    /*border: 1px solid blue; REMOVE BEFORE PUSH !!!*/
+  }
+  
+@media (max-width: 600px) {
+    .wrap {
+      flex-direction: column;
+    }
+    .wrap-left {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .wrap-right {
+        width: 100%;
+    }
 }
 
 .content {
@@ -189,6 +206,7 @@ nav .icon {
 
 .content section {
     background: rgba(59, 59, 59, 0.73);
+    margin: auto;
     color: white;
 }
 
@@ -222,34 +240,11 @@ nav .icon {
     text-decoration: underline;
 }
 
-.toc-container {
-    max-width: 320px;
-}
-
-.toc-doc {
-    font-size: 1rem;
-    padding: 6px 24px;
-    position: relative;
-    background: rgba(59, 59, 59, 0.73);
-}
-
-.toc-doc ul {
-    list-style: none;
-    padding: 0 24px;
-    top: 65px;
-    z-index: 300;
-}
-
-.toc-doc ul li {
-    line-height: 1.2;
-    margin:20px 0
-}
-
-.toc-doc a {
-    color: white;
-}
-
 /* Pseudo-Window thing */
+.window {
+    margin: auto;
+}
+
 .window p {
     color: black;
     background: grey;
@@ -265,6 +260,7 @@ nav .icon {
     border-right: 4px solid rgb(66, 66, 66);
     border-bottom: 4px solid rgb(66, 66, 66);
     box-shadow: 10px 15px 4px rgba(0, 0, 0, 0.384);
+    margin-bottom: 30px;
 }
 
 .window h3 {
@@ -299,6 +295,7 @@ nav .icon {
     border-right: 4px solid rgb(66, 66, 66);
     border-bottom: 4px solid rgb(66, 66, 66);
     box-shadow: 10px 15px 4px rgba(0, 0, 0, 0.384);
+    margin-bottom: 30px;
 }
 
 .window h2 {
@@ -316,8 +313,6 @@ nav .icon {
     border-top: 4px solid rgb(95, 95, 95);
     border-bottom: 4px solid rgb(66, 66, 66);
     box-shadow: 10px 15px 4px rgba(0, 0, 0, 0.384);
-    margin-bottom: 0px;
-    margin-top: 30px;
 }
 
 .window a {
